crates/nash-codegen/src/snapshots/nash_codegen__builtin_sharing_tests__delay.snap
---
source: crates/nash-codegen/src/builtin_sharing_tests.rs
expression: "format!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs)"
---
--- uplc before
(force
  (delay
    (force
      [[(force (builtin trace)) (con string "forced")] (delay (con integer 42))])))
--- uplc after
[(lam builtin_1
  (force
    (delay (force [[builtin_1 (con string "forced")] (delay (con integer 42))]))))
  (force (builtin trace))]
--- result
(con integer 42)
--- logs
["forced"]
