crates/nash-codegen/src/snapshots/nash_codegen__builtin_sharing_tests__discarded_bool_default.snap
---
source: crates/nash-codegen/src/builtin_sharing_tests.rs
expression: "format!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs)"
---
--- uplc before
(case (con bool True) (con integer 0) (con integer 42))
--- uplc after
(case (con bool True) (con integer 0) (con integer 42))
--- result
(con integer 42)
--- logs
[]
