crates/nash-codegen/src/snapshots/nash_codegen__builtin_sharing_tests__discarded_data_default.snap
---
source: crates/nash-codegen/src/builtin_sharing_tests.rs
expression: "format!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs)"
---
--- uplc before
[(lam generated_8
  (force
    [[[[[[(force (builtin chooseData)) generated_8] (delay (con integer 42))]
      (delay (con integer 42))]
      (delay (con integer 42))]
      (delay (con integer 42))]
      (delay (con integer 42))]))
  [(builtin iData) (con integer 42)]]
--- uplc after
[(lam builtin_10
  [(lam generated_9
    (force
      [[[[[[builtin_10 generated_9] (delay (con integer 42))] (delay (con integer 42))]
        (delay (con integer 42))]
        (delay (con integer 42))]
        (delay (con integer 42))]))
    [(builtin iData) (con integer 42)]])
  (force (builtin chooseData))]
--- result
(con integer 42)
--- logs
[]
