crates/nash-codegen/src/snapshots/nash_codegen__builtin_sharing_tests__lowered_data.snap
---
source: crates/nash-codegen/src/builtin_sharing_tests.rs
expression: "format!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs)"
---
--- uplc before
[(lam generated_2
  (force
    [[[[[[(force (builtin chooseData)) generated_2] (delay (error))] (delay (error))]
      (delay (error))]
      (delay
        [(lam decoded_1
          (force [[(force (builtin trace)) (con string "integer")] (delay decoded_1)]))
          [(builtin unIData) generated_2]])]
      (delay (error))]))
  [(builtin iData) (con integer 42)]]
--- uplc after
[(lam builtin_3
  [(lam builtin_4
    [(lam generated_2
      (force
        [[[[[[builtin_4 generated_2] (delay (error))] (delay (error))] (delay (error))]
          (delay
            [(lam decoded_1 (force [[builtin_3 (con string "integer")] (delay decoded_1)]))
              [(builtin unIData) generated_2]])]
          (delay (error))]))
      [(builtin iData) (con integer 42)]])
    (force (builtin chooseData))])
  (force (builtin trace))]
--- result
(con integer 42)
--- logs
["integer"]
