crates/nash-codegen/src/snapshots/nash_codegen__builtin_sharing_tests__recursion.snap
---
source: crates/nash-codegen/src/builtin_sharing_tests.rs
expression: "format!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs)"
---
--- uplc before
[(lam loop_2 [loop_2 (con integer 3)])
  [(lam self_3 [self_3 self_3])
    (lam self_3
      (lam n_1
        (case
          [[(builtin equalsInteger) n_1] (con integer 0)]
          (force
            [[(force (builtin trace)) (con string "tick")]
              (delay [[self_3 self_3] [[(builtin subtractInteger) n_1] (con integer 1)]])])
          (con integer 42))))]]
--- uplc after
[(lam builtin_4
  [(lam loop_2 [loop_2 (con integer 3)])
    [(lam self_3 [self_3 self_3])
      (lam self_3
        (lam n_1
          (case
            [[(builtin equalsInteger) n_1] (con integer 0)]
            (force
              [[builtin_4 (con string "tick")]
                (delay [[self_3 self_3] [[(builtin subtractInteger) n_1] (con integer 1)]])])
            (con integer 42))))]])
  (force (builtin trace))]
--- result
(con integer 42)
--- logs
["tick", "tick", "tick"]
