crates/nash-codegen/src/snapshots/nash_codegen__builtin_sharing_tests__single.snap
---
source: crates/nash-codegen/src/builtin_sharing_tests.rs
expression: "format!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs)"
---
--- uplc before
(lam x_1 (force [[(force (builtin trace)) (con string "called")] (delay x_1)]))
--- uplc after
[(lam builtin_2
  (lam x_1 (force [[builtin_2 (con string "called")] (delay x_1)])))
  (force (builtin trace))]
--- result
(con integer 3)
--- logs
["called"]
