crates/nash-codegen/src/snapshots/nash_codegen__builtin_sharing_tests__two_forces.snap
---
source: crates/nash-codegen/src/builtin_sharing_tests.rs
expression: "format!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs)"
---
--- uplc before
[(builtin unIData)
  [(force (force (builtin fstPair)))
    [[(builtin mkPairData) [(builtin iData) (con integer 42)]]
      [(builtin iData) (con integer 42)]]]]
--- uplc after
[(lam builtin_1
  [(builtin unIData)
    [builtin_1
      [[(builtin mkPairData) [(builtin iData) (con integer 42)]]
        [(builtin iData) (con integer 42)]]]])
  (force (force (builtin fstPair)))]
--- result
(con integer 42)
--- logs
[]
